<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/banner_height"
	    android:background="@color/blue_title_bar" >
	    
	    <Button
	        android:id="@+id/banner_back_btn"
	        android:layout_width="40dp"
	        android:layout_height="match_parent"
	        android:padding="6dp"
	        android:gravity="left|center_vertical"
	        android:background="@color/blue_title_bar"
	        android:textColor="@android:color/white"
	        android:textSize="18sp"
	        android:text="@string/btn_back" />
	    
	    <TextView
	        android:id="@+id/banner_title_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="20dp"
	        android:textColor="@android:color/white"
	        android:textSize="22sp"
	        android:text="@string/app_name" />
	    
	    <Button
	        android:id="@+id/banner_alert_btn"
	        android:layout_width="76dp"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/alert_btn_bg"
	        android:textSize="18sp"
	        android:textColor="@android:color/white"
	        android:text="@string/btn_alert" />
	</RelativeLayout>
</LinearLayout>
