<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableBottom="@drawable/divider"
                android:text="@string/set_schedule_med_info"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/take_medicine_medname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/take_medicine_medimage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/shadow_box" />

            <TextView
                android:id="@+id/take_medicine_medinfo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_text" />

            <TextView
                android:id="@+id/take_medicine_medinfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/gray_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableBottom="@drawable/divider"
                android:text="@string/take_medicine_schedule_info"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/take_medicine_schedule_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/gray_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/take_medicine_tracking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_medicine_tracking"
                    android:textOff="@string/take_medicine_tracking"
                    android:textOn="@string/take_medicine_tracking" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/take_medicine_tracking_info"
                    android:textColor="@color/gray_text" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:drawableBottom="@drawable/divider"
                android:text="@string/take_medicine_schedule_status"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/take_medicine_schedule_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/gray_text"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/take_medicine_status_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" />

            <Button
                android:id="@+id/take_medicine_take_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onTakeClick"
                android:text="@string/btn_take" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>